--- a/#source/scss/style.scss
+++ b/#source/scss/style.scss
@@ -406,7 +406,7 @@ button
 
 .sunset 
 {
-    background: url('../img/mountbg.PNG') no-repeat;
+    background: url('../img/mountbg.png') no-repeat;
     background-size: cover;
     height: 800px;
 }
@@ -531,7 +531,7 @@ button
 
 
     width: 50%;
-    background: url('../img/pic3.PNG') no-repeat;
+    background: url('../img/pic3.png') no-repeat;
     background-size: cover;
 }
 
