--- a/css/style.css
+++ b/css/style.css
@@ -469,7 +469,7 @@ button:hover .menu__line {
 
 .tgc__right {
   width: 50%;
-  background: url("../img/pic3.png") no-repeat;
+  background: url("../img/pic3.PNG") no-repeat;
   background-size: cover;
 }
 
