--- a/#source/scss/style.scss
+++ b/#source/scss/style.scss
@@ -531,7 +531,7 @@ button
 
 
     width: 50%;
-    background: url('../img/pic3.png') no-repeat;
+    background: url('../img/pic3.PNG') no-repeat;
     background-size: cover;
 }
 
